various thinks in the backend, read description
- Add endpoint for above/below average usage
- Track number of unique users for emote
- Fix problem with renamed emotes during emote update processing
- Speed up MessageHandler by removing reduntant db query
- Renamed User to Streamer
